# DoomBitcrusher

./: CMakeLists.txt  DoomBitcrusher.jucer  README.md  build_cmake.sh  build_fedora.sh  clang++-wrapper.sh
.github/workflows/: build.yml
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
docs/: README.md
src/: BitcrusherEditor.cpp  BitcrusherEditor.h  BitcrusherPlugin.cpp  BitcrusherPlugin.h
